Installing Express and development dependencies

--- a/doc/ch02.md
+++ b/doc/ch02.md
@@ -13,3 +13,21 @@ npm install --global lerna
 lerna init
 
 ```
+
+```sh
+cd packages
+mkdir server && cd server
+```
+
+Installing Express.js and development dependencies
+
+```sh
+npm install express
+npm install --save-dev typescript ts-node
+
+npx tsc --init
+```
+
+```sh
+npm install –save-dev @types/node @types/express
+```
