Creating the server

--- a/doc/ch02.md
+++ b/doc/ch02.md
@@ -19,7 +19,7 @@ cd packages
 mkdir server && cd server
 ```
 
-Installing Express.js and development dependencies
+## Installing Express.js and development dependencies
 
 ```sh
 npm install express
@@ -30,4 +30,9 @@ npx tsc --init
 
 ```sh
 npm install –save-dev @types/node @types/express
+```
+
+## Creating the server
+```sh
+mkdir src && touch src/index.ts
 ```
