Watching and recompiling our code

--- a/doc/ch02.md
+++ b/doc/ch02.md
@@ -36,3 +36,8 @@ npm install –save-dev @types/node @types/express
 ```sh
 mkdir src && touch src/index.ts
 ```
+
+## Watching and recompiling our code
+```sh
+npm install --save-dev ts-node-dev
+```
