Creating a GraphQL API-Installing the necessary libraries

--- a/doc/ch02.md
+++ b/doc/ch02.md
@@ -43,3 +43,12 @@ npm install --save-dev ts-node-dev
 ```
 
 ## build code 
+
+## Creating a GraphQL API
+### Installing the necessary libraries
+```sh
+npm install graphql @apollo/server @graphql-tools/utils @graphql-tools/schema
+npm install --save-dev graphql-tag
+
+```
+
