Exposing a simple GraphQL API

--- a/doc/ch02.md
+++ b/doc/ch02.md
@@ -51,4 +51,8 @@ npm install graphql @apollo/server @graphql-tools/utils @graphql-tools/schema
 npm install --save-dev graphql-tag
 
 ```
+## Exposing a simple GraphQL API
+```sh 
+npm install graphql @apollo/client
+```
 
