Creating a GraphQL schema for our social network

--- a/doc/ch02.md
+++ b/doc/ch02.md
@@ -56,3 +56,8 @@ npm install --save-dev graphql-tag
 npm install graphql @apollo/client
 ```
 
+## Creating a GraphQL schema for our social network
+```sh
+cd src && mkdir graphql
+cd graphql && touch schema.ts && touch schema.graphql && touch resolvers.ts 
+```
