--- a/doc/ch02.md
+++ b/doc/ch02.md
@@ -61,3 +61,15 @@ npm install graphql @apollo/client
 cd src && mkdir graphql
 cd graphql && touch schema.ts && touch schema.graphql && touch resolvers.ts 
 ```
+
+## install ESLint
+reference 
+- [eslint-for-typescript](https://khalilstemmler.com/blogs/typescript/eslint-for-typescript/)
+- [How to use Prettier with ESLint and TypeScript in VSCode](https://khalilstemmler.com/blogs/tooling/prettier/)
+
+
+```sh
+npm run lint
+npm run lint-and-fix
+npm run prettier-format
+```
